# cloudlibc

./: .gitignore  meson.build
src/: meson.build
src/crt/: meson.build
src/libc/: meson.build
src/libc/arpa/: meson.build
src/libc/arpa/inet/: meson.build
src/libc/assert/: meson.build
src/libc/complex/: meson.build
src/libc/ctype/: meson.build
src/libc/dirent/: meson.build
src/libc/dlfcn/: meson.build
src/libc/errno/: meson.build
src/libc/execinfo/: meson.build
src/libc/fcntl/: meson.build
src/libc/fenv/: meson.build
src/libc/float10/: f10dec.c  f10enc_get_double.c  f10enc_get_float.c  f10enc_get_long_double.c  meson.build
src/libc/float10cc/: meson.build
src/libc/fmtmsg/: meson.build
src/libc/fnmatch/: meson.build
src/libc/iconv/: meson.build
src/libc/inttypes/: meson.build
src/libc/langinfo/: meson.build
src/libc/libgen/: meson.build
src/libc/libintl/: meson.build
src/libc/link/: meson.build
src/libc/locale/: meson.build
src/libc/math/: meson.build
src/libc/monetary/: meson.build
src/libc/mqueue/: meson.build
src/libc/net/: meson.build
src/libc/net/if/: meson.build
src/libc/netdb/: meson.build
src/libc/netinet/: meson.build
src/libc/netinet/in/: meson.build
src/libc/poll/: meson.build
src/libc/program/: meson.build
src/libc/pthread/: meson.build
src/libc/regex/: meson.build
src/libc/sched/: meson.build
src/libc/search/: meson.build
src/libc/semaphore/: meson.build
src/libc/setjmp/: meson.build
src/libc/signal/: meson.build
src/libc/stack_chk/: meson.build
src/libc/stdatomic/: meson.build
src/libc/stdio/: meson.build
src/libc/stdlib/: meson.build
src/libc/string/: meson.build
src/libc/strings/: meson.build
src/libc/sys/: meson.build
src/libc/sys/capsicum/: meson.build
src/libc/sys/ioctl/: meson.build
src/libc/sys/mman/: meson.build
src/libc/sys/resource/: meson.build
src/libc/sys/select/: meson.build
src/libc/sys/socket/: meson.build
src/libc/sys/stat/: meson.build
src/libc/sys/time/: meson.build
src/libc/sys/times/: meson.build
src/libc/sys/uio/: meson.build
src/libc/sys/utsname/: meson.build
src/libc/syslog/: meson.build
src/libc/threads/: meson.build
src/libc/time/: meson.build
src/libc/uchar/: meson.build
src/libc/unistd/: meson.build
src/libc/uv/: meson.build
src/libc/wchar/: meson.build
src/libc/wctype/: meson.build
subprojects/: argdata.wrap  cloudabi.wrap
subprojects/packagefiles/argdata/: meson.build
subprojects/packagefiles/cloudabi/: meson.build
