subdir('arpa')
subdir('assert')
subdir('complex')
subdir('ctype')
subdir('dirent')
subdir('dlfcn')
subdir('errno')
subdir('execinfo')
subdir('fcntl')
subdir('fenv')
subdir('float10')
subdir('fmtmsg')
subdir('fnmatch')
subdir('iconv')
subdir('inttypes')
subdir('langinfo')
subdir('libgen')
subdir('libintl')
subdir('link')
subdir('locale')
subdir('math')
subdir('monetary')
subdir('mqueue')
subdir('net')
subdir('netdb')
subdir('netinet')
subdir('poll')
subdir('program')
subdir('pthread')
subdir('regex')
subdir('sched')
subdir('search')
subdir('semaphore')
subdir('setjmp')
subdir('signal')
subdir('stack_chk')
subdir('stdatomic')
subdir('stdio')
subdir('stdlib')
subdir('string')
subdir('strings')
subdir('sys')
subdir('syslog')
subdir('threads')
subdir('time')
subdir('uchar')
subdir('unistd')
subdir('uv')
subdir('wchar')
subdir('wctype')
