srcs += files(
  'duplocale.c',
  'freelocale.c',
  'locale_c.c',
  'locale_c_unicode.c',
  'locale_compile_string.c',
  'locale_compile_wstring.c',
  'locale_get_compiled.c',
  'locale_translate_string.c',
  'localeconv.c',
  'localeconv_l.c',
  'lookup_ctype.c',
  'newlocale.c',
  'setlocale.c',

  'collate/posix.c',
  'ctype/us_ascii.c',
  'ctype/utf_8.c',
  'messages/en_us.c',
  'monetary/posix.c',
  'numeric/posix.c',
  'time/posix.c',
  'timezone/utc.c',
)
