srcs += files(
  'regcomp.c',
  'regcomp_l.c',
  'regerror.c',
  'regerror_l.c',
  'regexec.c',
  'regexec_l.c',
  'regfree.c',
  'regncomp.c',
  'regncomp_l.c',
  'regnexec.c',
  'regnexec_l.c',
  'regwcomp.c',
  'regwcomp_l.c',
  'regwexec.c',
  'regwncomp.c',
  'regwncomp_l.c',
  'regwnexec.c',
)
