srcs += files(
  'atomic_compare_exchange.c',
  'atomic_exchange.c',
  'atomic_fallback_locks.c',
  'atomic_flag_clear.c',
  'atomic_flag_clear_explicit.c',
  'atomic_flag_test_and_set.c',
  'atomic_flag_test_and_set_explicit.c',
  'atomic_load.c',
  'atomic_signal_fence.c',
  'atomic_store.c',
  'atomic_thread_fence.c',
)
