srcs += files(
  '_Exit.c',
  'a64l.c',
  'abort.c',
  'abs.c',
  'arc4random.c',
  'arc4random_buf.c',
  'arc4random_uniform.c',
  'at_quick_exit.c',
  'at_quick_exit_last.c',
  'atexit.c',
  'atexit_last.c',
  'atof.c',
  'atoi.c',
  'atol.c',
  'atoll.c',
  'bsearch.c',
  'cxa_atexit.c',
  'div.c',
  'drand48.c',
  'environ.c',
  'erand48.c',
  'exit.c',
  'getenv.c',
  'getsubopt.c',
  'jrand48.c',
  'l64a_r.c',
  'labs.c',
  'ldiv.c',
  'llabs.c',
  'lldiv.c',
  'lrand48.c',
  'MB_CUR_MAX_L.c',
  'mblen.c',
  'mblen_l.c',
  'mbstowcs.c',
  'mbstowcs_l.c',
  'mbtowc.c',
  'mbtowc_l.c',
  'mrand48.c',
  'nrand48.c',
  'qsort.c',
  'qsort_r.c',
  'quick_exit.c',
  'rand.c',
  'random.c',
  'reallocarray.c',
  'strtod.c',
  'strtod_l.c',
  'strtof.c',
  'strtof_l.c',
  'strtol.c',
  'strtol_l.c',
  'strtold.c',
  'strtold_l.c',
  'strtoll.c',
  'strtoll_l.c',
  'strtoul.c',
  'strtoul_l.c',
  'strtoull.c',
  'strtoull_l.c',
  'wcstombs.c',
  'wcstombs_l.c',
  'wctomb.c',
  'wctomb_l.c',
)
