srcs += files(
  'memccpy.c',
  'memchr.c',
  'memcmp.c',
  'memmem.c',
  'memmove.c',
  'memrchr.c',
  'memset.c',
  'stpcpy.c',
  'stpncpy.c',
  'strcat.c',
  'strchr.c',
  'strcmp.c',
  'strcoll.c',
  'strcoll_l.c',
  'strcpy.c',
  'strcspn.c',
  'strdup.c',
  'strerror.c',
  'strerror_l.c',
  'strerror_r.c',
  'strlcat.c',
  'strlcpy.c',
  'strlen.c',
  'strncat.c',
  'strncmp.c',
  'strncpy.c',
  'strndup.c',
  'strnlen.c',
  'strpbrk.c',
  'strrchr.c',
  'strsep.c',
  'strsignal.c',
  'strsignal_l.c',
  'strspn.c',
  'strstr.c',
  'strtok_r.c',
  'strverscmp.c',
  'strxfrm.c',
  'strxfrm_l.c',
)
