srcs += files(
  'call_once.c',
  'cnd_broadcast.c',
  'cnd_destroy.c',
  'cnd_init.c',
  'cnd_signal.c',
  'cnd_timedwait.c',
  'cnd_wait.c',
  'mtx_destroy.c',
  'mtx_init.c',
  'mtx_lock.c',
  'mtx_timedlock.c',
  'mtx_trylock.c',
  'mtx_unlock.c',
  'thrd_create.c',
  'thrd_detach.c',
  'thrd_exit.c',
  'thrd_join.c',
  'thrd_yield.c',
  'tss_create.c',
  'tss_delete.c',
  'tss_set.c',
)
