srcs += files(
  'asctime_r.c',
  'clock.c',
  'clock_getres.c',
  'clock_gettime.c',
  'CLOCK_MONOTONIC.c',
  'clock_nanosleep.c',
  'CLOCK_PROCESS_CPUTIME_ID.c',
  'CLOCK_REALTIME.c',
  'CLOCK_THREAD_CPUTIME_ID.c',
  'ctime_r.c',
  'daylight.c',
  'difftime.c',
  'localtime_l.c',
  'localtime_r.c',
  'localtime_utc.c',
  'mktime.c',
  'mktime_l.c',
  'mktime_utc.c',
  'nanosleep.c',
  'strftime.c',
  'strftime_l.c',
  'strptime.c',
  'strptime_l.c',
  'time.c',
  'timespec_get.c',
  'timezone.c',
  'tzname.c',
  'tzset.c',
)
