srcs += files(
  'close.c',
  'crypt_r.c',
  'dup.c',
  'dup2.c',
  'faccessat.c',
  'fdatasync.c',
  'fsync.c',
  'ftruncate.c',
  'linkat.c',
  'lseek.c',
  'pipe.c',
  'pread.c',
  'pwrite.c',
  'read.c',
  'readlinkat.c',
  'sleep.c',
  'swab.c',
  'symlinkat.c',
  'sysconf.c',
  'unlinkat.c',
  'usleep.c',
  'write.c',
)
