srcs += files(
  'uv_accept.c',
  'uv_async_init.c',
  'uv_async_send.c',
  'uv_backend_timeout.c',
  'uv_barrier_destroy.c',
  'uv_barrier_init.c',
  'uv_barrier_wait.c',
  'uv_buf_init.c',
  'uv_cancel.c',
  'uv_check_init.c',
  'uv_check_start.c',
  'uv_check_stop.c',
  'uv_close.c',
  'uv_cond_broadcast.c',
  'uv_cond_destroy.c',
  'uv_cond_init.c',
  'uv_cond_signal.c',
  'uv_cond_timedwait.c',
  'uv_cond_wait.c',
  'uv_disable_stdio_inheritance.c',
  'uv_err_name.c',
  'uv_fileno.c',
  'uv_fs_close.c',
  'uv_fs_fdatasync.c',
  'uv_fs_fstat.c',
  'uv_fs_fsync.c',
  'uv_fs_ftruncate.c',
  'uv_fs_futime.c',
  'uv_fs_read.c',
  'uv_fs_req_cleanup.c',
  'uv_fs_sendfile.c',
  'uv_fs_write.c',
  'uv_get_osfhandle.c',
  'uv_getaddrinfo.c',
  'uv_getnameinfo.c',
  'uv_getrusage.c',
  'uv_guess_handle.c',
  'uv_handle_size.c',
  'uv_has_ref.c',
  'uv_hrtime.c',
  'uv_idle_init.c',
  'uv_idle_start.c',
  'uv_idle_stop.c',
  'uv_if_indextoname.c',
  'uv_inet_ntop.c',
  'uv_inet_pton.c',
  'uv_ip4_addr.c',
  'uv_ip4_name.c',
  'uv_ip6_addr.c',
  'uv_ip6_name.c',
  'uv_is_active.c',
  'uv_is_closing.c',
  'uv_is_readable.c',
  'uv_is_writable.c',
  'uv_key_create.c',
  'uv_key_delete.c',
  'uv_key_get.c',
  'uv_key_set.c',
  'uv_loop_alive.c',
  'uv_loop_close.c',
  'uv_loop_init.c',
  'uv_loop_size.c',
  'uv_mutex_init_recursive.c',
  'uv_now.c',
  'uv_once.c',
  'uv_os_getenv.c',
  'uv_pipe_init.c',
  'uv_pipe_open.c',
  'uv_pipe_pending_count.c',
  'uv_pipe_pending_type.c',
  'uv_poll_init.c',
  'uv_poll_start.c',
  'uv_poll_stop.c',
  'uv_prepare_init.c',
  'uv_prepare_start.c',
  'uv_prepare_stop.c',
  'uv_print_active_handles.c',
  'uv_print_all_handles.c',
  'uv_process_kill.c',
  'uv_queue_work.c',
  'uv_read_start.c',
  'uv_read_stop.c',
  'uv_ref.c',
  'uv_req_size.c',
  'uv_run.c',
  'uv_rwlock_destroy.c',
  'uv_rwlock_init.c',
  'uv_rwlock_rdlock.c',
  'uv_rwlock_tryrdlock.c',
  'uv_rwlock_trywrlock.c',
  'uv_rwlock_wrlock.c',
  'uv_rwlock_wrunlock.c',
  'uv_sem_destroy.c',
  'uv_sem_init.c',
  'uv_sem_post.c',
  'uv_sem_trywait.c',
  'uv_sem_wait.c',
  'uv_shutdown.c',
  'uv_stop.c',
  'uv_stream_set_blocking.c',
  'uv_strerror.c',
  'uv_strerror_unknown.c',
  'uv_tcp_init.c',
  'uv_tcp_init_ex.c',
  'uv_tcp_open.c',
  'uv_thread_create.c',
  'uv_thread_equal.c',
  'uv_thread_join.c',
  'uv_timer_again.c',
  'uv_timer_get_repeat.c',
  'uv_timer_init.c',
  'uv_timer_set_repeat.c',
  'uv_timer_start.c',
  'uv_timer_stop.c',
  'uv_translate_sys_error.c',
  'uv_try_write.c',
  'uv_tty_init.c',
  'uv_tty_reset_mode.c',
  'uv_udp_init.c',
  'uv_udp_init_ex.c',
  'uv_udp_open.c',
  'uv_udp_recv_start.c',
  'uv_udp_recv_stop.c',
  'uv_unref.c',
  'uv_update_time.c',
  'uv_version.c',
  'uv_version_string.c',
  'uv_walk.c',
  'uv_write.c',
  'uv_write2.c',
)
