srcs += files(
  'iswalnum.c',
  'iswalnum_l.c',
  'iswalpha.c',
  'iswalpha_l.c',
  'iswblank.c',
  'iswblank_l.c',
  'iswcntrl.c',
  'iswcntrl_l.c',
  'iswctype.c',
  'iswctype_l.c',
  'iswdigit.c',
  'iswdigit_l.c',
  'iswgraph.c',
  'iswgraph_l.c',
  'iswlower.c',
  'iswlower_l.c',
  'iswprint.c',
  'iswprint_l.c',
  'iswpunct.c',
  'iswpunct_l.c',
  'iswspace.c',
  'iswspace_l.c',
  'iswupper.c',
  'iswupper_l.c',
  'iswxdigit.c',
  'iswxdigit_l.c',
  'towctrans.c',
  'towctrans_l.c',
  'towlower.c',
  'towlower_l.c',
  'towupper.c',
  'towupper_l.c',
  'wctrans.c',
  'wctrans_l.c',
  'wctype.c',
  'wctype_l.c',
)
