srcs += files(
  'IN6_IS_ADDR_LINKLOCAL.c',
  'IN6_IS_ADDR_LOOPBACK.c',
  'IN6_IS_ADDR_MC_GLOBAL.c',
  'IN6_IS_ADDR_MC_LINKLOCAL.c',
  'IN6_IS_ADDR_MC_NODELOCAL.c',
  'IN6_IS_ADDR_MC_ORGLOCAL.c',
  'IN6_IS_ADDR_MC_SITELOCAL.c',
  'IN6_IS_ADDR_MULTICAST.c',
  'IN6_IS_ADDR_SITELOCAL.c',
  'IN6_IS_ADDR_UNSPECIFIED.c',
  'IN6_IS_ADDR_V4COMPAT.c',
  'IN6_IS_ADDR_V4MAPPED.c',
  'in6addr_any.c',
  'in6addr_loopback.c',
)
